--- a/slides/py_slides_viz.slides.html
+++ b/slides/py_slides_viz.slides.html
@@ -7507,9 +7507,7 @@ main {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 id="Housekeeping">Housekeeping<a class="anchor-link" href="#Housekeeping">¶</a></h1><ul>
-<li>Reference sheet now on Canvas and in the syllabus</li>
-<li>TA office hour on Mon 4-5 pm</li>
-<li>Server will be down for upgrades between 12-3pm on Tues Oct 3rd</li>
+<li>None today</li>
 </ul>
 </div>
 </div>
