--- a/slides/py_slides_version_control.slides.html
+++ b/slides/py_slides_version_control.slides.html
@@ -7452,22 +7452,14 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Housekeeping">Housekeeping<a class="anchor-link" href="#Housekeeping">¶</a></h1><ul>
-<li><p>Quiz this week!</p>
+<h1 id="Housekeeping">Housekeeping<a class="anchor-link" href="#Housekeeping">¶</a></h1><pre><code>- The quiz is 50 min long</code></pre>
 <ul>
-<li>In the Tutorial session -- Thursday @ 12:30</li>
-<li>The quiz is 50 min long</li>
-</ul>
-</li>
-<li><p>Format</p>
-<ul>
+<li>Format<ul>
 <li>open book (but not collaborative)</li>
 <li>will be served on Canvas</li>
 <li>covers all the material from weeks 1 - 4 (but none of the optional web scraping is included)</li>
 <li>make sure you have either Chrome, Firefox, or some other browser compatible with all of Canvas' functionality. Sometimes Safari has trouble loading images and math.</li>
 </ul>
-</li>
-<li><p>Practice questions are on Canvas. It has unlimited attempts. We suggest you only do the practice quiz after finishing all the worksheets/tutorials</p>
 </li>
 </ul>
 </div>
