updated intro slides for Pysection

--- a/slides/py_slides_intro.slides.html
+++ b/slides/py_slides_intro.slides.html
@@ -7457,12 +7457,13 @@ main {
 <li>Section 002 (R): Grace Tompkins</li>
 <li>Section 005 (R): Daniel Chen</li>
 <li>Section 006 (R): Geoffrey Pleiss</li>
+<li>Section 007 (R): Maria Eugenia Bernaschini</li>
 <li>Section 010 (R): Vivian Meng</li>
 <li><strong>Section 100 (Py): Valentina Radic</strong></li>
 </ul>
 <p><strong>Meeting times:</strong></p>
 <!-- TODO Add the time for the tutorial and lecture of your section -->
-<p>Lectures:  4:00pm - 5:30pm Tues and Thurs</p>
+<p>Lectures:  Tue &amp; Thu 4-5:30 pm</p>
 </div>
 </div>
 </div>
@@ -7474,6 +7475,8 @@ main {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h3 id="TA-Team-for-this-section">TA Team for this section<a class="anchor-link" href="#TA-Team-for-this-section">¶</a></h3><!-- TODO Add your TA team here -->
+<p>Phoebe Yu</p>
+<p>Yu Xuan (Rainie)</p>
 </div>
 </div>
 </div>
@@ -7512,40 +7515,6 @@ main {
 </div>
 </div>
 </div></section></section><section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="COVID-19-Policy">COVID-19 Policy<a class="anchor-link" href="#COVID-19-Policy">¶</a></h2><p>Our primary goal is keeping everyone as safe as possible. See <a href="https://srs.ubc.ca/health-safety/safety-programs/communicable-disease-prevention-framework/covid-19/">UBC's COVID-19 Campus Rules</a> for the latest updates.</p>
-<ul>
-<li><strong>Masks:</strong> Masks are optional when you are in class. Please respect the individual preferences of your classmates/instructors.</li>
-<li><strong>Vaccines:</strong> Getting vaccinated is good. Please get vaccinated if you are able to, for your safety and others'.</li>
-</ul>
-</div>
-</div>
-</div>
-</div><div class="fragment">
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<ul>
-<li><strong>If you feel unwell, it doesn't matter what it is: STAY. HOME.</strong><ul>
-<li>you can do your assignments remotely</li>
-<li>we can make alternate arrangements for quizzes</li>
-<li>I will drop the lowest worksheet + tutorial score at the end of class</li>
-</ul>
-</li>
-</ul>
-<center><img alt="No description has been provided for this image" src="https://cdn.dribbble.com/users/5024684/screenshots/10813428/media/8cd2048b42f10a32d67b5775b99f488b.gif" width="500"/></center>
-</div>
-</div>
-</div>
-</div></div></section></section><section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -7766,37 +7735,7 @@ main {
 </div>
 </div>
 </div>
-</div><aside class="notes">
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Assignments">Assignments<a class="anchor-link" href="#Assignments">¶</a></h3><ul>
-<li>Lectures during the first class each week.<ul>
-<li>Lecture worksheets (e.g. <code>worksheet_intro</code>) are due <strong>Saturdays at 11:59pm</strong></li>
-</ul>
-</li>
-<li>Tutorials during the second class each week.<ul>
-<li>Tutorial worksheets (e.g. <code>tutorial_intro</code>) are due <strong>Saturdays at 11:59pm</strong></li>
-</ul>
-</li>
-<li>No "submit button" - our server takes a snapshot at the due date/time</li>
-<li>Please make sure you <strong>manually save your work! Do not rely on automatic checkpoints!</strong></li>
-<li>The server should basically be on 24 / 7. I will give notice before we shut it down (barring any emergencies).</li>
-<li>See the course syllabus for two common mistakes to avoid for autograded assignments</li>
-<li>Each worksheet is not worth a lot of points -- they are designed to help you learn, not evaluate you.<ul>
-<li><strong>Please do collaborate, but do not copy!</strong></li>
-<li>We won't give extensions for weekly assignments. We will drop the lowest grade for each worksheet and tutorial at the end of the semester.</li>
-</ul>
-</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</aside></section></section><section><section>
+</div></section></section><section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
