final updates for intro lecture slides Week 1

--- a/slides/py_slides_intro.slides.html
+++ b/slides/py_slides_intro.slides.html
@@ -7440,7 +7440,7 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="DSCI-100---Introduction-to-Data-Science">DSCI 100 - Introduction to Data Science<a class="anchor-link" href="#DSCI-100---Introduction-to-Data-Science">¶</a></h1><h2 id="Lecture-1---Getting-started-with-Jupyter-&amp;-Python">Lecture 1 - Getting started with Jupyter &amp; Python<a class="anchor-link" href="#Lecture-1---Getting-started-with-Jupyter-&amp;-Python">¶</a></h2><img alt="No description has been provided for this image" src="img/programming_women.jpg" width="1000"/>
+<h1 id="DSCI-100---Introduction-to-Data-Science">DSCI 100 - Introduction to Data Science<a class="anchor-link" href="#DSCI-100---Introduction-to-Data-Science">¶</a></h1><h2 id="Lecture-1---Getting-started-with-Jupyter-&amp;-Python">Lecture 1 - Getting started with Jupyter &amp; Python<a class="anchor-link" href="#Lecture-1---Getting-started-with-Jupyter-&amp;-Python">¶</a></h2><img alt="No description has been provided for this image" src="img/programming_women.jpg" width="800"/>
 <p><em>Photos/Images by #WOCinTech/#WOCinTech Chat (<a href="https://creativecommons.org/licenses/by/2.0/">CC-BY</a>)</em></p>
 </div>
 </div>
@@ -7454,16 +7454,12 @@ main {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="Teaching-Team-Introductions">Teaching Team Introductions<a class="anchor-link" href="#Teaching-Team-Introductions">¶</a></h2><h3 id="Instructors">Instructors<a class="anchor-link" href="#Instructors">¶</a></h3><!-- TODO bold your section -->
 <ul>
-<li>Section 002 (R): Grace Tompkins</li>
-<li>Section 005 (R): Daniel Chen</li>
-<li>Section 006 (R): Geoffrey Pleiss</li>
-<li>Section 007 (R): Maria Eugenia Bernaschini</li>
+<li>Section 002 (R): Grace Tompkins; Section 005 (R): Daniel Chen</li>
+<li>Section 006 (R): Geoffrey Pleiss; Section 007 (R): Maria Eugenia Bernaschini</li>
 <li>Section 010 (R): Vivian Meng</li>
 <li><strong>Section 100 (Py): Valentina Radic</strong></li>
 </ul>
-<p><strong>Meeting times:</strong></p>
-<!-- TODO Add the time for the tutorial and lecture of your section -->
-<p>Lectures:  Tue &amp; Thu 4-5:30 pm</p>
+<p><strong>Meeting times</strong>: Tue &amp; Thu 4-5:30 pm</p>
 </div>
 </div>
 </div>
@@ -7475,8 +7471,7 @@ main {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h3 id="TA-Team-for-this-section">TA Team for this section<a class="anchor-link" href="#TA-Team-for-this-section">¶</a></h3><!-- TODO Add your TA team here -->
-<p>Phoebe Yu</p>
-<p>Yu Xuan (Rainie)</p>
+<p>Phoebe Yu, Yu Xuan (Rainie)</p>
 </div>
 </div>
 </div>
@@ -7549,7 +7544,7 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="No description has been provided for this image" src="https://media.giphy.com/media/up25s7QBalEmQ/giphy.gif" width="500"/>
+<img alt="No description has been provided for this image" src="https://media.giphy.com/media/up25s7QBalEmQ/giphy.gif" width="250"/>
 </div>
 </div>
 </div>
@@ -7684,7 +7679,7 @@ main {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="TL;DR">TL;DR<a class="anchor-link" href="#TL;DR">¶</a></h2><p>Yes, you satisfy the math requirement. There is no math requirement. Ignore SIS's scary warnings.</p>
-<img alt="No description has been provided for this image" src="https://media.giphy.com/media/l396BM0OLbZFvPQWI/giphy.gif" width="800"/>
+<img alt="No description has been provided for this image" src="https://media.giphy.com/media/l396BM0OLbZFvPQWI/giphy.gif" width="400"/>
 <p>But please do read the syllabus in more detail later!</p>
 </div>
 </div>
@@ -7831,7 +7826,7 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="We've-got-a-lot-to-do---let's-get-started!">We've got a lot to do - let's get started!<a class="anchor-link" href="#We've-got-a-lot-to-do---let's-get-started!">¶</a></h2><img alt="No description has been provided for this image" src="https://media.giphy.com/media/6onMzNPjtFeCI/giphy.gif" width="800"/>
+<h2 id="We've-got-a-lot-to-do---let's-get-started!">We've got a lot to do - let's get started!<a class="anchor-link" href="#We've-got-a-lot-to-do---let's-get-started!">¶</a></h2><img alt="No description has been provided for this image" src="https://media.giphy.com/media/6onMzNPjtFeCI/giphy.gif" width="400"/>
 </div>
 </div>
 </div>
